# c9y-cmake-test

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
.github/workflows/: cmake.yml
